# snapgraph

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: api_contract.md  demo_assets_plan.md  evaluation_method.md  graph_cognitive_interaction_plan.md  media_boundaries.md  phase_gate.md  snapgraph_phase7_1_status_evaluation.md  snapgraph_v0.1_design.md  workspace_schema.md
examples/: demo_runbook.md
examples/demo_sources/: meeting_research_plan.md  note_graphrag.md  note_llm_wiki.md  note_methodology.md  note_on_device_models.md  note_screenshot_entry.md  note_snapgraph_idea.md  todo_open_loops.md
frontend/: index.html  vite.config.ts
frontend/src/: App.vue  styles.css  types.ts
frontend/src/components/: CollectView.vue  GraphSpaceView.vue  RecallHome.vue  RecallResult.vue  SpacesView.vue
snapgraph/: __init__.py  answer.py  api.py  cli.py  config.py  demo_app.py  demo_data.py  diagnostics.py  evaluation.py  focus.py  graph_store.py  ingest.py  linting.py  llm.py  llm_providers.py  models.py  parsers.py  report.py  retrieval.py  spaces.py  wiki.py  workspace.py
snapgraph/static/: index.html
snapgraph/static/assets/: index-3l1iipme.js  index-B2sdGXyL.css  index-C43OEe0L.js  index-C4ZbYv8m.css  index-C8Ndq4rv.css  index-CBoALx09.js  (+12 more)
tests/: collect_phase2a_ui.test.ts  graph_phase2b_ui.test.ts  recall_phase1_ui.test.ts  test_answer.py  test_api.py  test_cli.py  test_config.py  test_focus.py  test_graph_interactions.py  test_graph_store.py  test_ingest.py  test_linting.py  test_report.py  test_spaces.py  test_workspace.py
